@@ -1,3 +1,10 @@
+Mon Sep  6 12:35:27 2004  Tim Janik  <timj@gtk.org>
+
+	* sfiprimitives.c (sfi_ring_reorder): fixed pointer comparision
+	function that caused an unsorted intermediate structure.
+
+	* testsfi.c (test_sfi_ring): added one more sfi_ring_reorder() test.
+
 Sat Sep  4 04:59:57 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiparams.h: removed misplaced pspec option comments.
